--- a/index.html
+++ b/index.html
@@ -16,30 +16,23 @@
   <link rel="shortcut icon" href="./img/fbavatar_1630400663387_6838396024049256103.png" type="image/x-icon">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
- <meta name="title" content="Portfolio Website | Sanket Bodake">
- <meta name="title" content="Portfolio Website | Sanket Bodake">
+ <meta name="title" content="Portfolio Website | Nishil Gangrade">
+ <meta name="title" content="Portfolio Website | Nishil Gangrade">
  <meta itemprop="description" content="Web Developer | Open source Enthusiast">
  <meta name="application-name" content="Portfolio Website">
  <meta property="og:site_name" content="">
- <meta property="og:type" content="website">
- <meta property="og:url" content="https://sanketbodake.ninja/">
- <meta property="og:title" content="Sanket Bodake">
+ 
+ <meta property="og:title" content="Nishil Gangrade">
  <meta property="og:description" content="Portfolio website | Web Developer | Open source Enthusiast">
- <meta name="url" content="https://sanketbodake.ninja/">
+ 
  <meta name="language" content="English">  
  <meta property="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://sanketbodake.ninja/">
-<meta name="twitter:title" content="Sanket Bodake">
+
 <meta name="twitter:description" content="Portfolio website | Web Developer | Open source Enthusiast">
-<meta name="twitter:site" content="@Sanket46171296">
-<meta name="twitter:creator" content="@Sanket46171296">
-<meta name="url" content="https://sanketbodake.ninja/">
+
 <meta property="og:locale" content="en">
 <meta name="language" content="English">
-<meta itemprop="image" content="https://sanketbodake.ninja/myImage.jpg">
-<meta property="og:image" content="https://sanketbodake.ninja/myImage.jpg">
-<meta name="twitter:image" content="https://sanketbodake.ninja/myImage.jpg">
-<meta name="twitter:image:src" content="https://sanketbodake.ninja/myImage.jpg">
+
 <meta property="og:image:type" content="image/png">
 <meta property="og:image:width" content="512">
 <meta property="og:image:height" content="512">
