--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       <div class="contact-content">
         <h2>Contact Me</h2>
         <p class="mail">
-          Get in touch with me <i class="fas fa-arrow-right"></i> nishilgangarde2003@gmail.com
+          Get in touch with me <i class="fas fa-arrow-right"></i> nishilgangrade2003@gmail.com
         </p>
         <p class="links">Or find me on:</p>
         <a href="https://www.linkedin.com/in/nishil-gangrade-b10284264/" target="blank"><i class="fab fa-linkedin">
